--- a/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
+++ b/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
@@ -105,7 +105,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ScalarWave_ETK_py_dir/WaveToyETK_C_kernels_codegen.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $ScalarWaveETKdir/WaveToyETK_C_kernels_codegen.py\n",
     "\n",
@@ -201,7 +209,15 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ScalarWave_ETK_py_dir/WaveToyETK_C_kernels_codegen.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a $ScalarWaveETKdir/WaveToyETK_C_kernels_codegen.py\n",
     "\n",
@@ -280,7 +296,15 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ScalarWave_ETK_py_dir/WaveToyETK_C_kernels_codegen.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a $ScalarWaveETKdir/WaveToyETK_C_kernels_codegen.py\n",
     "\n",
@@ -390,19 +414,19 @@
       "\n",
       "Generating symbolic expressions for WaveToy RHSs...\n",
       "Generating symbolic expressions for WaveToy RHSs...\n",
-      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.020549774169921875 seconds.(BENCH) Finished WaveToy RHS symbolic expressions in 0.020544052124023438 seconds.\n",
+      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.01595902442932129 seconds.(BENCH) Finished WaveToy RHS symbolic expressions in 0.01606130599975586 seconds.\n",
       "\n",
-      "Generating C code for WaveToy RHSs (FD_order=6) in Cartesian coordinates.Generating C code for WaveToy RHSs (FD_order=4) in Cartesian coordinates.\n",
+      "Generating C code for WaveToy RHSs (FD_order=2) in Cartesian coordinates.Generating C code for WaveToy RHSs (FD_order=4) in Cartesian coordinates.\n",
       "\n",
-      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.019306659698486328 seconds.\n",
-      "Generating C code for WaveToy RHSs (FD_order=2) in Cartesian coordinates.\n",
-      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.02498793601989746 seconds.\n",
+      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.01991891860961914 seconds.\n",
+      "Generating C code for WaveToy RHSs (FD_order=6) in Cartesian coordinates.\n",
+      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.020931720733642578 seconds.\n",
       "Generating C code for WaveToy RHSs (FD_order=8) in Cartesian coordinates.\n",
-      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=2) in 0.03319406509399414 seconds.\n",
-      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=4) in 0.06288862228393555 seconds.\n",
-      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=6) in 0.09815311431884766 seconds.\n",
-      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=8) in 0.13662219047546387 seconds.\n",
-      "(BENCH) Finished C kernel codegen for WaveToy in 0.6206808090209961 seconds.\n"
+      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=2) in 0.052909135818481445 seconds.\n",
+      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=4) in 0.08585810661315918 seconds.\n",
+      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=6) in 0.0957636833190918 seconds.\n",
+      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=8) in 0.15320992469787598 seconds.\n",
+      "(BENCH) Finished C kernel codegen for WaveToy in 0.5363039970397949 seconds.\n"
      ]
     }
    ],
@@ -1415,7 +1439,7 @@
     "\n",
     "**Three-dimensional scalar wave equation code tests, adopting fourth-order finite differencing, coupled to RK4 method-of-lines for time integration**\n",
     "\n",
-    "Inside the directory *`WaveToyNRPy/example_parfiles/8thOrder_ConvergenceTests/`* are the files used for this convergence test:\n",
+    "Inside the directory *`WaveToyNRPy/example_parfiles/4thOrder_ConvergenceTests/`* are the files used for this convergence test:\n",
     "**spherical_gaussian\\*.par** : ETK parameter files needed for performing the 3D tests. These parameter files set up a spherical gaussian wave propagating in a 3D numerical grid that extends from -13.0 to +13.0 along the x-, y-, and z-axis (in units of $c=1$). The parameter files are identical, except one has grid resolution that is twice as high (so the errors should drop in the higher resolution case by a factor of $2^4$, since we adopt eighth-order-convergent timestepping and spatial finite differencing.)\n",
     "\n",
     "**Fourth-order code validation test results:**\n",
@@ -1538,7 +1562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
