--- a/Tutorial-LaTeX_SymPy_Conversion.ipynb
+++ b/Tutorial-LaTeX_SymPy_Conversion.ipynb
@@ -300,7 +300,7 @@
     "#### Example 1 (Contraction)\n",
     "LaTeX Source | Rendered LaTeX\n",
     ":----------- | :-------------\n",
-    "<pre lang=\"latex\"> h = h^\\\\mu{}_\\\\mu </pre> | $$ h = h^\\mu{}_\\mu $$"
+    "<pre lang=\"latex\"> h = h^\\mu{}_\\mu </pre> | $$ h = h^\\mu{}_\\mu $$"
    ]
   },
   {
@@ -350,7 +350,7 @@
     "#### Example 2 (Index Raising)\n",
     "LaTeX Source | Rendered LaTeX\n",
     ":----------- | :-------------\n",
-    "<pre lang=\"latex\"> v^\\\\mu = g^{\\\\mu\\\\nu} v_\\\\nu </pre> | $$ v^\\mu = g^{\\mu\\nu} v_\\nu $$"
+    "<pre lang=\"latex\"> v^\\mu = g^{\\mu\\nu} v_\\nu </pre> | $$ v^\\mu = g^{\\mu\\nu} v_\\nu $$"
    ]
   },
   {
@@ -400,7 +400,7 @@
     "#### Example 3 (Einstein Tensor)\n",
     "LaTeX Source | Rendered LaTeX\n",
     ":----------- | :-------------\n",
-    "<pre lang=\"latex\"> \\\\begin{align\\*}<br>&emsp;&emsp;&emsp; R &= g_{ab} R^{ab} \\\\\\\\ <br>&emsp;&emsp;&emsp; G^{ab} &= R^{ab} - \\\\frac{1}{2}g^{ab}R <br> \\\\end{align\\*} </pre> | $$ \\begin{align*} R &= g_{ab} R^{ab} \\\\ G^{ab} &= R^{ab} - \\frac{1}{2}g^{ab}R \\end{align*} $$"
+    "<pre lang=\"latex\"> \\\\begin{align\\*}<br>&emsp;&emsp;&emsp; R &= g_{ab} R^{ab} \\\\\\\\ <br>&emsp;&emsp;&emsp; G^{ab} &= R^{ab} - \\frac{1}{2}g^{ab}R <br> \\\\end{align\\*} </pre> | $$ \\begin{align*} R &= g_{ab} R^{ab} \\\\ G^{ab} &= R^{ab} - \\frac{1}{2}g^{ab}R \\end{align*} $$"
    ]
   },
   {
@@ -592,7 +592,7 @@
     {
      "data": {
       "text/plain": [
-       "['GammaUDD', 'FUU', 'FUU_dD', 'gUU', 'gDD', 'gDD_dD', 'FUU_cdD', 'JU']"
+       "['FUU', 'FUU_dD', 'gUU', 'gDD', 'gDD_dD', 'GammaUDD', 'FUU_cdD', 'JU']"
       ]
      },
      "execution_count": 19,
@@ -629,9 +629,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GammaUDD = [[[sum([gUU[mu][c]*gDD_dD[a][c][b]/2 for c in range(4)]) - sum([gUU[mu][c]*gDD_dD[b][a][c]/2 for c in range(4)]) + sum([gUU[mu][c]*gDD_dD[c][b][a]/2 for c in range(4)]) for b in range(4)] for a in range(4)] for mu in range(4)] \n",
+      "GammaUDD = [[[sum([gUU[mu][c]*gDD_dD[a][c][b]/2 for c in range(4)]) - sum([gUU[mu][c]*gDD_dD[b][a][c]/2 for c in range(4)]) + sum([gUU[mu][c]*gDD_dD[c][b][a]/2 for c in range(4)]) for a in range(4)] for mu in range(4)] for b in range(4)] \n",
       "\n",
-      "FUU_cdD = [[[sum([FUU[b][nu]*GammaUDD[mu][b][a] for b in range(4)]) + sum([FUU[mu][b]*GammaUDD[nu][b][a] for b in range(4)]) + FUU_dD[mu][nu][a] for nu in range(4)] for a in range(4)] for mu in range(4)] \n",
+      "FUU_cdD = [[[sum([FUU[b][nu]*GammaUDD[mu][b][a] for b in range(4)]) + sum([FUU[mu][b]*GammaUDD[nu][b][a] for b in range(4)]) + FUU_dD[mu][nu][a] for a in range(4)] for mu in range(4)] for nu in range(4)] \n",
       "\n",
       "JU = [sum([FUU_cdD[mu][nu][nu]/(4*pi*k) for nu in range(4)]) for mu in range(4)] \n",
       "\n"
