--- a/Tutorial-LaTeX_SymPy_Conversion.ipynb
+++ b/Tutorial-LaTeX_SymPy_Conversion.ipynb
@@ -49,31 +49,31 @@
     "\n",
     "In the following section, we discuss [lexical analysis](https://en.wikipedia.org/wiki/Lexical_analysis) (lexing) and [syntax analysis](https://en.wikipedia.org/wiki/Parsing) (parsing). In the process of lexical analysis, a lexer will tokenize a character string, called a sentence, using substring pattern matching (or tokenizing). We implemented a regex-based lexer for NRPy+, which does pattern matching using a [regular expression](https://en.wikipedia.org/wiki/Regular_expression) for each token pattern. In the process of syntax analysis, a parser will receive a token iterator from the lexer and build a parse tree containing all syntactic information of the language, as specified by a [formal grammar](https://en.wikipedia.org/wiki/Formal_grammar). We implemented a [recursive descent parser](https://en.wikipedia.org/wiki/Recursive_descent_parser) for NRPy+, which will build a parse tree in [preorder](https://en.wikipedia.org/wiki/Tree_traversal#Pre-order_(NLR)), starting from the root [nonterminal](https://en.wikipedia.org/wiki/Terminal_and_nonterminal_symbols), using a [right recursive](https://en.wikipedia.org/wiki/Left_recursion) grammar. The following right recursive, [context-free grammar](https://en.wikipedia.org/wiki/Context-free_grammar) was written for parsing [LaTeX](https://en.wikipedia.org/wiki/LaTeX), adhering to the canonical (extended) [BNF](https://en.wikipedia.org/wiki/Backus%E2%80%93Naur_form) notation used for describing a context-free grammar:\n",
     "```\n",
-    "<ROOT>         -> <EXPRESSION> | <STRUCTURE> { <LINE_BREAK> <STRUCTURE> }*\n",
-    "<STRUCTURE>    -> <CONFIG> | <ENVIRONMENT> | <ASSIGNMENT>\n",
-    "<ENVIRONMENT>  -> <BEGIN_ALIGN> <ASSIGNMENT> { <LINE_BREAK> <ASSIGNMENT> }* <END_ALIGN>\n",
-    "<ASSIGNMENT>   -> ( <CDRV> | <VARIABLE> ) = <EXPRESSION>\n",
-    "<EXPRESSION>   -> <TERM> { ( '+' | '-' ) <TERM> }*\n",
-    "<TERM>         -> <FACTOR> { [ '/' ] <FACTOR> }*\n",
-    "<FACTOR>       -> ( <BASE> | <EULER> ) { '^' <EXPONENT> }*\n",
-    "<BASE>         -> [ '-' ] ( <ATOM> | '(' <EXPRESSION> ')' )\n",
-    "<EXPONENT>     -> <BASE> | '{' <BASE> '}'\n",
-    "<ATOM>         -> <VARIABLE> | <NUMBER> | <OPERATOR> | <COMMAND>\n",
-    "<VARIABLE>     -> <ARRAY> | <SYMBOL> [ '_' ( <SYMBOL> | <INTEGER> ) ]\n",
-    "<NUMBER>       -> <RATIONAL> | <DECIMAL> | <INTEGER> | <PI>\n",
-    "<COMMAND>      -> <SQRT> | <FRAC> | <NLOG> | <TRIG>\n",
-    "<OPERATOR>     -> <PDRV> | <CDRV>\n",
-    "<SQRT>         -> <SQRT_CMD> [ '[' <INTEGER> ']' ] '{' <EXPRESSION> '}'\n",
-    "<FRAC>         -> <FRAC_CMD> '{' <EXPRESSION> '}' '{' <EXPRESSION> '}'\n",
-    "<NLOG>         -> <NLOG_CMD> [ '_' <INTEGER> | { <INTEGER> } ] ( <SYMBOL> | <INTEGER> | '(' <EXPRESSION> ')' )\n",
-    "<TRIG>         -> <TRIG_CMD> [ '^' <INTEGER> | { <INTEGER> } ] ( <SYMBOL> | <INTEGER> | '(' <EXPRESSION> ')' )\n",
-    "<PDRV>         -> { <PDRV_OP> '_' <SYMBOL> }+ ( <ARRAY> | '(' <EXPRESSION> ')' )\n",
-    "<CDRV>         -> { <CDRV_OP> ( '^' | '_' ) <SYMBOL> }+ ( <ARRAY> | '(' <EXPRESSION> ')' )\n",
-    "<CONFIG>       -> '%' <ARRAY> '[' <INTEGER> ']' [ ':' <SYMMETRY> ] { ',' <ARRAY> '[' <INTEGER> ']' [ ':' <SYMMETRY> ] }*\n",
-    "<ARRAY>        -> <ARRAY_LABEL> ( '_' <LOWER_INDEX> ) | ( '^' <UPPER_INDEX> [ '_' <LOWER_INDEX> ] ] )\n",
-    "<LOWER_INDEX>  -> <SYMBOL> | '{' { <SYMBOL> }* [ ',' { <SYMBOL> }+ ] '}'\n",
-    "<UPPER_INDEX>  -> <SYMBOL> | '{' { <SYMBOL> }+ '}'\n",
-    "<ARRAY_LABEL>  -> <TENSOR> | <LABEL> '{' <TENSOR> '}'\n",
+    "<ROOT>        -> <STRUCTURE> { <LINE_BREAK> <STRUCTURE> }*\n",
+    "<STRUCTURE>   -> <CONFIG> | <ENVIRONMENT> | <ASSIGNMENT>\n",
+    "<ENVIRONMENT> -> <BEGIN_ALIGN> <ASSIGNMENT> { <LINE_BREAK> <ASSIGNMENT> }* <END_ALIGN>\n",
+    "<ASSIGNMENT>  -> ( <TENSOR> | <COVDRV> ) = <EXPRESSION>\n",
+    "<EXPRESSION>  -> <TERM> { ( '+' | '-' ) <TERM> }*\n",
+    "<TERM>        -> <FACTOR> { [ '/' ] <FACTOR> }*\n",
+    "<FACTOR>      -> ( <BASE> | <EULER> ) { '^' <EXPONENT> }*\n",
+    "<BASE>        -> [ '-' ] ( <ATOM> | '(' <EXPRESSION> ')' )\n",
+    "<EXPONENT>    -> <BASE> | '{' <BASE> '}' | '{{' <BASE> '}}'\n",
+    "<ATOM>        -> <NUMBER> | <TENSOR> | <COMMAND> | <OPERATOR>\n",
+    "<NUMBER>      -> <RATIONAL> | <DECIMAL> | <INTEGER> | <PI>\n",
+    "<COMMAND>     -> <SQRT> | <FRAC> | <NLOG> | <TRIG>\n",
+    "<OPERATOR>    -> <PARDRV> | <COVDRV>\n",
+    "<SQRT>        -> <SQRT_CMD> [ '[' <INTEGER> ']' ] '{' <EXPRESSION> '}'\n",
+    "<FRAC>        -> <FRAC_CMD> '{' <EXPRESSION> '}' '{' <EXPRESSION> '}'\n",
+    "<NLOG>        -> <NLOG_CMD> [ '_' <INTEGER> | { <INTEGER> } ] ( <SYMBOL> | <INTEGER> | '(' <EXPRESSION> ')' )\n",
+    "<TRIG>        -> <TRIG_CMD> [ '^' <INTEGER> | { <INTEGER> } ] ( <SYMBOL> | <INTEGER> | '(' <EXPRESSION> ')' )\n",
+    "<PARDRV>      -> { <PARDRV_OP> '_' <SYMBOL> }+ ( <TENSOR> | '(' <EXPRESSION> ')' )\n",
+    "<COVDRV>      -> { <COVDRV_OP> ( '^' | '_' ) <SYMBOL> }+ ( <TENSOR> | '(' <EXPRESSION> ')' )\n",
+    "<CONFIG> -> '%' <VARIABLE> '[' <INTEGER> ']' [ ':' <SYMMETRY> ] { ',' <VARIABLE> '[' <INTEGER> ']' [ ':' <SYMMETRY> ] }*\n",
+    "<TENSOR>      -> <VARIABLE> [ ( '_' <LOWER_INDEX> ) | ( '^' <UPPER_INDEX> [ '_' <LOWER_INDEX> ] ) ]\n",
+    "<VARIABLE>    -> <SYMBOL> | <STRING> | <DIACRITIC> '{' <SYMBOL> '}'\n",
+    "<STRING>      -> <MATHOP> '{' <SYMBOL> { <SYMBOL> | <INTEGER> | <UNDERSCORE> }* '}'\n",
+    "<LOWER_INDEX> -> <SYMBOL> | '{' { <SYMBOL> }* [ ',' { <SYMBOL> }+ ] '}'\n",
+    "<UPPER_INDEX> -> <SYMBOL> | '{' { <SYMBOL> }+ '}'\n",
     "```\n",
     "\n",
     "<small>**Source**: Robert W. Sebesta. Concepts of Programming Languages. Pearson Education Limited, 2016.</small>"
@@ -98,12 +98,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SQRT_CMD, LEFT_BRACE, INTEGER, RIGHT_BRACE, LEFT_PAREN, SYMBOL, PLUS, RATIONAL, RIGHT_PAREN, CARET, INTEGER\n"
+      "LEFT_PAREN, INTEGER, PLUS, SYMBOL, DIVIDE, SYMBOL, RIGHT_PAREN, CARET, SYMBOL\n"
      ]
     }
    ],
    "source": [
-    "lexer = Lexer(); lexer.initialize(r'\\sqrt{5}(x + 2/3)^2')\n",
+    "lexer = Lexer(); lexer.initialize(r'(1 + x/n)^n')\n",
     "print(', '.join(token for token in lexer.tokenize()))"
    ]
   },
@@ -116,12 +116,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sqrt(5)*(x + 2/3)**2 : Mul(Pow(Integer(5), Rational(1, 2)), Pow(Add(Symbol('x'), Rational(2, 3)), Integer(2)))\n"
+      "(1 + x/n)**n : Pow(Add(Integer(1), Mul(Pow(Symbol('n'), Integer(-1)), Symbol('x'))), Symbol('n'))\n"
      ]
     }
    ],
    "source": [
-    "expr = parse(r'\\sqrt{5}(x + 2/3)^2', expression=True)\n",
+    "expr = parse_expr(r'(1 + x/n)^n')\n",
     "print(expr, ':', srepr(expr))"
    ]
   },
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### `Grammar Derivation: (x + 2/3)^2`\n",
+    "#### `Grammar Derivation: (1 + x/n)^n`\n",
     "```\n",
     "<EXPRESSION> -> <TERM>\n",
     "             -> <FACTOR>\n",
@@ -139,20 +139,11 @@
     "             -> (<FACTOR> + <TERM>)^<EXPONENT>\n",
     "             -> (<BASE> + <TERM>)^<EXPONENT>\n",
     "             -> (<ATOM> + <TERM>)^<EXPONENT>\n",
-    "             -> (<VARIABLE> + <TERM>)^<EXPONENT>\n",
-    "             -> (<SYMBOL> + <TERM>)^<EXPONENT>\n",
-    "             -> (x + <TERM>)^<EXPONENT>\n",
-    "             -> (x + <FACTOR>)^<EXPONENT>\n",
-    "             -> (x + <BASE>)^<EXPONENT>\n",
-    "             -> (x + <ATOM>)^<EXPONENT>\n",
-    "             -> (x + <NUMBER>)^<EXPONENT>\n",
-    "             -> (x + <RATIONAL>)^<EXPONENT>\n",
-    "             -> (x + 2/3)^<EXPONENT>\n",
-    "             -> (x + 2/3)^<BASE>\n",
-    "             -> (x + 2/3)^<ATOM>\n",
-    "             -> (x + 2/3)^<NUMBER>\n",
-    "             -> (x + 2/3)^<INTEGER>\n",
-    "             -> (x + 2/3)^2\n",
+    "             -> (<NUMBER> + <TERM>)^<EXPONENT>\n",
+    "             -> (<INTEGER> + <TERM>)^<EXPONENT>\n",
+    "             -> (1 + <TERM>)^<EXPONENT>\n",
+    "             -> (1 + <FACTOR> / <FACTOR>)^<EXPONENT>\n",
+    "             -> ...\n",
     "```"
    ]
   },
@@ -167,7 +158,7 @@
     "\n",
     "We implemented a wrapper function for the `parse()` method that will accept a LaTeX sentence and return a SymPy expression. Furthermore, the entire parsing module was designed for extendibility. We apply the following procedure for extending parser functionality to include an unsupported LaTeX command: append that command to the grammar dictionary in the Lexer class with the mapping regex:token, write a grammar abstraction (similar to a regular expression) for that command, add the associated nonterminal (the command name) to the command abstraction in the Parser class, and finally implement the straightforward (private) method for parsing the grammar abstraction. We shall demonstrate the extension procedure using the `\\sqrt` LaTeX command.\n",
     "\n",
-    "```<SQRT> -> '\\\\sqrt' [ '[' <INTEGER> ']' ] '{' <EXPRESSION> '}'```\n",
+    "```<SQRT> -> <SQRT_CMD> [ '[' <INTEGER> ']' ] '{' <EXPRESSION> '}'```\n",
     "```\n",
     "def _sqrt(self):\n",
     "    if self.accept('LEFT_BRACKET'):\n",
@@ -179,8 +170,24 @@
     "    self.expect('LEFT_BRACE')\n",
     "    expr = self.__expr()\n",
     "    self.expect('RIGHT_BRACE')\n",
+    "    if root == Rational(1, 2):\n",
+    "        return sqrt(expr)\n",
     "    return Pow(expr, root)\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In addition to expression parsing, we included support for equation parsing, which will produce a dictionary mapping LHS $\\mapsto$ RHS, where LHS must be a symbol, and insert that mapping into the global namespace of the previous stack frame, as demonstrated below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\mathop{s_n} = \\left(1 + \\frac{1}{n}\\right)^n $$"
    ]
   },
   {
@@ -192,36 +199,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "alpha_0**(1/3)\n"
+      "s_n = (1 + 1/n)**n\n"
      ]
     }
    ],
    "source": [
-    "print(parse(r'\\sqrt[3]{\\alpha_0}', expression=True))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In addition to expression parsing, we included support for equation parsing, which will produce a dictionary mapping LHS $\\mapsto$ RHS, where LHS must be a symbol, and insert that mapping into the global namespace of the previous stack frame, as demonstrated below."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2**(n/2)*n\n"
-     ]
-    }
-   ],
-   "source": [
-    "parse(r'x = n\\sqrt{2}^n'); print(x)"
+    "parse(r'\\mathop{s_n} = \\left(1 + \\frac{1}{n}\\right)^n')\n",
+    "print('s_n =', s_n)"
    ]
   },
   {
@@ -233,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,20 +231,20 @@
     "    #                   ^\n",
     "    # expected token INTEGER at position 6\n",
     "\n",
-    "# parse(r'\\command{}')\n",
-    "    # ParseError: \\command{}\n",
+    "# parse(r'\\command{x}')\n",
+    "    # ParseError: \\command{x}\n",
     "    #             ^\n",
     "    # unsupported command '\\command' at position 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from warnings import filterwarnings # Import Python function for warning suppression\n",
-    "filterwarnings('ignore', category=OverrideWarning); del Parser.namespace['x']"
+    "filterwarnings('ignore', category=OverrideWarning); Parser.namespace.clear()"
    ]
   },
   {
@@ -272,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +274,7 @@
     "\n",
     "In the following section, we demonstrate the current parser support for tensor notation using the Einstein summation convention. The first example will parse an equation for a tensor contraction, the second will parse an equation for raising an index using the metric tensor, and the third will parse an align enviroment with an equation dependency. In each example, every tensor should appear either on the LHS of an equation or inside of a configuration before appearing on the RHS of an equation. Moreover, the parser will raise an exception upon violation of the Einstein summation convention, i.e. an invalid free or bound index.\n",
     "\n",
-    "**Configuration Syntax** `% <TENSOR> [<DIMENSION>]: <SYMMETRY>, <TENSOR> [<DIMENSION>]: <SYMMETRY>, ... ;`"
+    "**Configuration Syntax** `% <VARIABLE> [<DIMENSION>]: <SYMMETRY>, <VARIABLE> [<DIMENSION>]: <SYMMETRY>, ... ;`"
    ]
   },
   {
@@ -305,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +298,7 @@
        "['hUD', 'h']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +348,7 @@
        "['gUU', 'gDD', 'vD', 'vU']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +398,7 @@
        "['gDD', 'gUU', 'RUU', 'R', 'GUU']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -450,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +475,7 @@
        "['epsilonDDD', 'vU', 'wU', 'uD']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +549,7 @@
        "              [vU1*wU2 - vU2*wU1, -vU0*wU2 + vU2*wU0, vU0*wU1 - vU1*wU0])])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +579,7 @@
        "['FUU', 'FUU_dD', 'gUU', 'gDD', 'gDD_dD', 'GammaUDD', 'FUU_cdD', 'JU']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,16 +606,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GammaUDD = [[[sum([gUU[mu][c]*gDD_dD[a][c][b]/2 for c in range(4)]) - sum([gUU[mu][c]*gDD_dD[b][a][c]/2 for c in range(4)]) + sum([gUU[mu][c]*gDD_dD[c][b][a]/2 for c in range(4)]) for a in range(4)] for mu in range(4)] for b in range(4)] \n",
+      "GammaUDD = [[[sum([gUU[mu][c]*gDD_dD[a][c][b]/2 for c in range(4)]) - sum([gUU[mu][c]*gDD_dD[b][a][c]/2 for c in range(4)]) + sum([gUU[mu][c]*gDD_dD[c][b][a]/2 for c in range(4)]) for b in range(4)] for a in range(4)] for mu in range(4)] \n",
       "\n",
-      "FUU_cdD = [[[sum([FUU[b][nu]*GammaUDD[mu][b][a] for b in range(4)]) + sum([FUU[mu][b]*GammaUDD[nu][b][a] for b in range(4)]) + FUU_dD[mu][nu][a] for a in range(4)] for mu in range(4)] for nu in range(4)] \n",
+      "FUU_cdD = [[[sum([FUU[b][nu]*GammaUDD[mu][b][a] for b in range(4)]) + sum([FUU[mu][b]*GammaUDD[nu][b][a] for b in range(4)]) + FUU_dD[mu][nu][a] for a in range(4)] for nu in range(4)] for mu in range(4)] \n",
       "\n",
       "JU = [sum([FUU_cdD[mu][nu][nu]/(4*pi*k) for nu in range(4)]) for mu in range(4)] \n",
       "\n"
@@ -646,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,18 +684,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created Tutorial-LaTeX_SymPy_Conversion.tex, and compiled LaTeX file to PDF\n",
-      "    file Tutorial-LaTeX_SymPy_Conversion.pdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-LaTeX_SymPy_Conversion\")"
